Enhance Folium Map Visualization for Ice Monitoring
- Improved handling of selected scenes in SINGLE_SCENE_MODE by matching scene names and asset hrefs.
- Separated layers for selected scenes and other scenes for better clarity.
- Added debug print statements to assist in tracking selected scenes.
- Updated layer control and added a fullscreen button for improved user experience.
- Enhanced legend descriptions for better understanding of map elements.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -666,11 +666,17 @@
         "# Interactive Map with Folium\n",
         "# ======================================================================\n",
         "# Shows scene bounding boxes on a satellite background\n",
-        "# Highlights the selected scene in SINGLE_SCENE_MODE\n",
+        "# Highlights the selected scene in SINGLE_SCENE_MODE with a separate layer\n",
         "\n",
         "import folium\n",
-        "from folium import GeoJson, Marker\n",
+        "from folium import GeoJson, FeatureGroup\n",
         "from folium.plugins import Fullscreen\n",
+        "\n",
+        "# Get the actually selected scene href (from processing cell)\n",
+        "selected_href = hrefs[0] if hrefs else None\n",
+        "selected_scene_basename = os.path.basename(selected_href.rstrip(\"/\")) if selected_href else None\n",
+        "\n",
+        "print(f\"DEBUG: Selected scene basename = {selected_scene_basename}\")\n",
         "\n",
         "# Create GeoDataFrame with scene bounding boxes\n",
         "scene_bboxes = []\n",
@@ -678,8 +684,15 @@
         "    bbox = item.bbox  # [west, south, east, north]\n",
         "    scene_polygon = box(bbox[0], bbox[1], bbox[2], bbox[3])\n",
         "    \n",
-        "    # Check if this is the selected scene in SINGLE_SCENE_MODE\n",
-        "    is_selected = SINGLE_SCENE_MODE and SINGLE_SCENE_NAME in item.id\n",
+        "    # Check if this is the selected scene - compare with actual href used\n",
+        "    # Match by checking if scene name appears in item.id or asset href\n",
+        "    is_selected = False\n",
+        "    if SINGLE_SCENE_MODE and selected_scene_basename:\n",
+        "        # Extract base name without .zarr for comparison\n",
+        "        scene_base = selected_scene_basename.replace(\".zarr\", \"\")\n",
+        "        is_selected = scene_base in item.id or (\n",
+        "            \"product\" in item.assets and scene_base in item.assets[\"product\"].href\n",
+        "        )\n",
         "    \n",
         "    scene_bboxes.append({\n",
         "        \"geometry\": scene_polygon,\n",
@@ -692,12 +705,10 @@
         "scenes_gdf = gpd.GeoDataFrame(scene_bboxes, crs=\"EPSG:4326\")\n",
         "\n",
         "# Separate selected scene from others\n",
-        "if SINGLE_SCENE_MODE:\n",
-        "    selected_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == True]\n",
-        "    other_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == False]\n",
-        "else:\n",
-        "    selected_gdf = gpd.GeoDataFrame()\n",
-        "    other_gdf = scenes_gdf\n",
+        "selected_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == True]\n",
+        "other_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == False]\n",
+        "\n",
+        "print(f\"DEBUG: Found {len(selected_gdf)} selected scene(s), {len(other_gdf)} other scene(s)\")\n",
         "\n",
         "# Calculate map center from AOI\n",
         "center_lon = (bbox_4326[0] + bbox_4326[2]) / 2\n",
@@ -707,7 +718,7 @@
         "m = folium.Map(\n",
         "    location=[center_lat, center_lon],\n",
         "    zoom_start=6,\n",
-        "    tiles=None  # We'll add custom tiles\n",
+        "    tiles=None\n",
         ")\n",
         "\n",
         "# Add Esri World Imagery as satellite basemap\n",
@@ -718,11 +729,11 @@
         "    overlay=False\n",
         ").add_to(m)\n",
         "\n",
-        "# Add other scene bounding boxes (not selected) in blue\n",
+        "# === Layer 1: Other Sentinel-2 Scenes (Blue) ===\n",
         "if len(other_gdf) > 0:\n",
+        "    other_layer = FeatureGroup(name=\"Other Sentinel-2 Scenes\")\n",
         "    GeoJson(\n",
         "        other_gdf.__geo_interface__,\n",
-        "        name=\"Other Sentinel-2 Scenes\",\n",
         "        style_function=lambda x: {\n",
         "            \"fillColor\": \"#3388ff\",\n",
         "            \"color\": \"#3388ff\",\n",
@@ -734,27 +745,66 @@
         "            aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
         "            localize=True\n",
         "        )\n",
-        "    ).add_to(m)\n",
+        "    ).add_to(other_layer)\n",
+        "    other_layer.add_to(m)\n",
         "\n",
-        "# Add selected scene bounding box in green with thicker border\n",
+        "# === Layer 2: Selected Scene (Green) - Separate FeatureGroup ===\n",
         "if SINGLE_SCENE_MODE and len(selected_gdf) > 0:\n",
+        "    selected_layer = FeatureGroup(name=\"★ SELECTED SCENE (Active)\")\n",
         "    GeoJson(\n",
         "        selected_gdf.__geo_interface__,\n",
-        "        name=\"Selected Scene (Active)\",\n",
         "        style_function=lambda x: {\n",
         "            \"fillColor\": \"#00ff00\",\n",
         "            \"color\": \"#00ff00\",\n",
-        "            \"weight\": 4,\n",
-        "            \"fillOpacity\": 0.3\n",
+        "            \"weight\": 5,\n",
+        "            \"fillOpacity\": 0.35\n",
         "        },\n",
         "        tooltip=folium.GeoJsonTooltip(\n",
         "            fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
         "            aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
         "            localize=True\n",
         "        )\n",
-        "    ).add_to(m)\n",
+        "    ).add_to(selected_layer)\n",
+        "    selected_layer.add_to(m)\n",
+        "elif SINGLE_SCENE_MODE and len(selected_gdf) == 0 and selected_href:\n",
+        "    # Fallback: If we couldn't match, create bbox from first href item\n",
+        "    print(f\"WARNING: Could not match selected scene in STAC items. Using first item as fallback.\")\n",
+        "    # Use the first valid item's bbox as the selected scene\n",
+        "    if valid_items:\n",
+        "        first_item = valid_items[0]\n",
+        "        for item in valid_items:\n",
+        "            if selected_scene_basename and selected_scene_basename.replace(\".zarr\", \"\") in item.assets.get(\"product\", {}).get(\"href\", \"\"):\n",
+        "                first_item = item\n",
+        "                break\n",
+        "        \n",
+        "        fallback_bbox = first_item.bbox\n",
+        "        fallback_polygon = box(fallback_bbox[0], fallback_bbox[1], fallback_bbox[2], fallback_bbox[3])\n",
+        "        fallback_gdf = gpd.GeoDataFrame([{\n",
+        "            \"geometry\": fallback_polygon,\n",
+        "            \"scene_id\": first_item.id,\n",
+        "            \"datetime\": first_item.datetime.strftime(\"%Y-%m-%d %H:%M\") if first_item.datetime else \"N/A\",\n",
+        "            \"cloud_cover\": first_item.properties.get(\"eo:cloud_cover\", \"N/A\")\n",
+        "        }], crs=\"EPSG:4326\")\n",
+        "        \n",
+        "        selected_layer = FeatureGroup(name=\"★ SELECTED SCENE (Active)\")\n",
+        "        GeoJson(\n",
+        "            fallback_gdf.__geo_interface__,\n",
+        "            style_function=lambda x: {\n",
+        "                \"fillColor\": \"#00ff00\",\n",
+        "                \"color\": \"#00ff00\",\n",
+        "                \"weight\": 5,\n",
+        "                \"fillOpacity\": 0.35\n",
+        "            },\n",
+        "            tooltip=folium.GeoJsonTooltip(\n",
+        "                fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
+        "                aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
+        "                localize=True\n",
+        "            )\n",
+        "        ).add_to(selected_layer)\n",
+        "        selected_layer.add_to(m)\n",
         "\n",
-        "# Add seed points\n",
+        "# === Layer 3: Seed Points (Red) ===\n",
+        "seeds_layer = FeatureGroup(name=\"Glacier Seed Points\")\n",
         "for idx, row in seeds_gdf.iterrows():\n",
         "    folium.CircleMarker(\n",
         "        location=[row.geometry.y, row.geometry.x],\n",
@@ -764,36 +814,42 @@
         "        fillColor=\"#ff0000\",\n",
         "        fillOpacity=1.0,\n",
         "        weight=1\n",
-        "    ).add_to(m)\n",
+        "    ).add_to(seeds_layer)\n",
+        "seeds_layer.add_to(m)\n",
         "\n",
-        "# Add AOI bounding box\n",
+        "# === Layer 4: AOI Bounding Box (Orange) ===\n",
         "aoi_polygon = box(bbox_4326[0], bbox_4326[1], bbox_4326[2], bbox_4326[3])\n",
         "aoi_gdf = gpd.GeoDataFrame([{\"geometry\": aoi_polygon, \"name\": \"AOI\"}], crs=\"EPSG:4326\")\n",
         "\n",
+        "aoi_layer = FeatureGroup(name=\"Area of Interest (AOI)\")\n",
         "GeoJson(\n",
         "    aoi_gdf.__geo_interface__,\n",
-        "    name=\"Area of Interest\",\n",
         "    style_function=lambda x: {\n",
         "        \"fillColor\": \"transparent\",\n",
         "        \"color\": \"#ff6600\",\n",
         "        \"weight\": 3,\n",
         "        \"dashArray\": \"10, 5\"\n",
         "    }\n",
-        ").add_to(m)\n",
+        ").add_to(aoi_layer)\n",
+        "aoi_layer.add_to(m)\n",
         "\n",
         "# Add layer control and fullscreen button\n",
-        "folium.LayerControl().add_to(m)\n",
+        "folium.LayerControl(collapsed=False).add_to(m)\n",
         "Fullscreen().add_to(m)\n",
         "\n",
         "# Print legend\n",
+        "print(f\"\\n{'='*50}\")\n",
         "print(f\"Map shows {len(scenes_gdf)} scene bounding boxes\")\n",
-        "if SINGLE_SCENE_MODE and len(selected_gdf) > 0:\n",
-        "    print(f\"  - GREEN polygon: Selected scene ({SINGLE_SCENE_NAME})\")\n",
-        "    print(f\"  - Blue polygons: Other available scenes ({len(other_gdf)} scenes)\")\n",
+        "if SINGLE_SCENE_MODE:\n",
+        "    print(f\"  ★ GREEN polygon: Selected/Active scene\")\n",
+        "    if selected_scene_basename:\n",
+        "        print(f\"    → {selected_scene_basename}\")\n",
+        "    print(f\"  • Blue polygons: Other available scenes ({len(other_gdf)})\")\n",
         "else:\n",
-        "    print(f\"  - Blue polygons: Sentinel-2 scene extents (hover for details)\")\n",
-        "print(f\"  - Red points: Glacier seed locations\")\n",
-        "print(f\"  - Orange dashed line: Area of Interest (AOI)\")\n",
+        "    print(f\"  • Blue polygons: All Sentinel-2 scene extents\")\n",
+        "print(f\"  • Red points: Glacier seed locations ({len(seeds_gdf)})\")\n",
+        "print(f\"  • Orange dashed: Area of Interest (AOI)\")\n",
+        "print(f\"{'='*50}\")\n",
         "\n",
         "m"
       ]
