Enhance interactive map visualization in ice monitoring notebook
- Updated map layers to display all Sentinel-2 scenes in blue.
- Highlighted the processed composite area in green with relevant attributes.
- Removed the separate handling for selected scenes, simplifying the logic.
- Improved map center calculation based on the composite area if available.
- Adjusted zoom level for better visibility.
- Updated legend to reflect changes in the displayed layers and their meanings.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -666,58 +666,83 @@
         "# Interactive Map with Folium\n",
         "# ======================================================================\n",
         "# Shows scene bounding boxes on a satellite background\n",
-        "# Highlights the selected scene in SINGLE_SCENE_MODE with a separate layer\n",
+        "# Highlights the actual processed area (composite bbox) in green\n",
         "\n",
         "import folium\n",
         "from folium import GeoJson, FeatureGroup\n",
         "from folium.plugins import Fullscreen\n",
         "\n",
-        "# Get the actually selected scene href (from processing cell)\n",
-        "selected_href = hrefs[0] if hrefs else None\n",
-        "selected_scene_basename = os.path.basename(selected_href.rstrip(\"/\")) if selected_href else None\n",
-        "\n",
-        "print(f\"DEBUG: Selected scene basename = {selected_scene_basename}\")\n",
-        "\n",
-        "# Create GeoDataFrame with scene bounding boxes\n",
+        "# Create GeoDataFrame with all scene bounding boxes (blue)\n",
         "scene_bboxes = []\n",
         "for item in valid_items:\n",
         "    bbox = item.bbox  # [west, south, east, north]\n",
         "    scene_polygon = box(bbox[0], bbox[1], bbox[2], bbox[3])\n",
-        "    \n",
-        "    # Check if this is the selected scene - compare with actual href used\n",
-        "    # Match by checking if scene name appears in item.id or asset href\n",
-        "    is_selected = False\n",
-        "    if SINGLE_SCENE_MODE and selected_scene_basename:\n",
-        "        # Extract base name without .zarr for comparison\n",
-        "        scene_base = selected_scene_basename.replace(\".zarr\", \"\")\n",
-        "        is_selected = scene_base in item.id or (\n",
-        "            \"product\" in item.assets and scene_base in item.assets[\"product\"].href\n",
-        "        )\n",
-        "    \n",
         "    scene_bboxes.append({\n",
         "        \"geometry\": scene_polygon,\n",
         "        \"scene_id\": item.id,\n",
         "        \"datetime\": item.datetime.strftime(\"%Y-%m-%d %H:%M\") if item.datetime else \"N/A\",\n",
-        "        \"cloud_cover\": item.properties.get(\"eo:cloud_cover\", \"N/A\"),\n",
-        "        \"is_selected\": is_selected\n",
+        "        \"cloud_cover\": item.properties.get(\"eo:cloud_cover\", \"N/A\")\n",
         "    })\n",
         "\n",
         "scenes_gdf = gpd.GeoDataFrame(scene_bboxes, crs=\"EPSG:4326\")\n",
         "\n",
-        "# Separate selected scene from others\n",
-        "selected_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == True]\n",
-        "other_gdf = scenes_gdf[scenes_gdf[\"is_selected\"] == False]\n",
+        "# === Get Composite BBox (actual processed area) ===\n",
+        "composite_gdf = None\n",
+        "if 'composite' in dir() and composite is not None:\n",
+        "    # Extract coordinates from composite (in UTM)\n",
+        "    try:\n",
+        "        x_coords = composite['ndsi_median'].coords['x'].values\n",
+        "        y_coords = composite['ndsi_median'].coords['y'].values\n",
+        "        \n",
+        "        # Get bounds in UTM\n",
+        "        utm_west = float(x_coords.min())\n",
+        "        utm_east = float(x_coords.max())\n",
+        "        utm_south = float(y_coords.min())\n",
+        "        utm_north = float(y_coords.max())\n",
+        "        \n",
+        "        # Transform back to WGS84\n",
+        "        transformer_to_wgs84 = Transformer.from_crs(target_crs, \"EPSG:4326\", always_xy=True)\n",
+        "        \n",
+        "        # Transform all 4 corners to handle projection distortion\n",
+        "        sw_lon, sw_lat = transformer_to_wgs84.transform(utm_west, utm_south)\n",
+        "        se_lon, se_lat = transformer_to_wgs84.transform(utm_east, utm_south)\n",
+        "        ne_lon, ne_lat = transformer_to_wgs84.transform(utm_east, utm_north)\n",
+        "        nw_lon, nw_lat = transformer_to_wgs84.transform(utm_west, utm_north)\n",
+        "        \n",
+        "        # Create polygon from corners\n",
+        "        from shapely.geometry import Polygon\n",
+        "        composite_polygon = Polygon([\n",
+        "            (sw_lon, sw_lat),\n",
+        "            (se_lon, se_lat),\n",
+        "            (ne_lon, ne_lat),\n",
+        "            (nw_lon, nw_lat),\n",
+        "            (sw_lon, sw_lat)  # close the ring\n",
+        "        ])\n",
+        "        \n",
+        "        composite_gdf = gpd.GeoDataFrame([{\n",
+        "            \"geometry\": composite_polygon,\n",
+        "            \"name\": \"Processed Composite Area\",\n",
+        "            \"scene_count\": composite.get(\"scene_count\", 1),\n",
+        "            \"snow_coverage\": f\"{composite.get('snow_percentage', 0):.1f}%\"\n",
+        "        }], crs=\"EPSG:4326\")\n",
+        "        \n",
+        "        print(f\"Composite bbox (UTM): W={utm_west:.0f}, E={utm_east:.0f}, S={utm_south:.0f}, N={utm_north:.0f}\")\n",
+        "        print(f\"Composite bbox (WGS84): W={sw_lon:.4f}, E={ne_lon:.4f}, S={sw_lat:.4f}, N={ne_lat:.4f}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Could not extract composite bbox: {e}\")\n",
         "\n",
-        "print(f\"DEBUG: Found {len(selected_gdf)} selected scene(s), {len(other_gdf)} other scene(s)\")\n",
-        "\n",
-        "# Calculate map center from AOI\n",
-        "center_lon = (bbox_4326[0] + bbox_4326[2]) / 2\n",
-        "center_lat = (bbox_4326[1] + bbox_4326[3]) / 2\n",
+        "# Calculate map center\n",
+        "if composite_gdf is not None:\n",
+        "    center_lon = composite_gdf.geometry.centroid.x.values[0]\n",
+        "    center_lat = composite_gdf.geometry.centroid.y.values[0]\n",
+        "else:\n",
+        "    center_lon = (bbox_4326[0] + bbox_4326[2]) / 2\n",
+        "    center_lat = (bbox_4326[1] + bbox_4326[3]) / 2\n",
         "\n",
         "# Create map with Esri satellite tiles\n",
         "m = folium.Map(\n",
         "    location=[center_lat, center_lon],\n",
-        "    zoom_start=6,\n",
+        "    zoom_start=7,\n",
         "    tiles=None\n",
         ")\n",
         "\n",
@@ -729,79 +754,42 @@
         "    overlay=False\n",
         ").add_to(m)\n",
         "\n",
-        "# === Layer 1: Other Sentinel-2 Scenes (Blue) ===\n",
-        "if len(other_gdf) > 0:\n",
-        "    other_layer = FeatureGroup(name=\"Other Sentinel-2 Scenes\")\n",
-        "    GeoJson(\n",
-        "        other_gdf.__geo_interface__,\n",
-        "        style_function=lambda x: {\n",
-        "            \"fillColor\": \"#3388ff\",\n",
-        "            \"color\": \"#3388ff\",\n",
-        "            \"weight\": 2,\n",
-        "            \"fillOpacity\": 0.15\n",
-        "        },\n",
-        "        tooltip=folium.GeoJsonTooltip(\n",
-        "            fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
-        "            aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
-        "            localize=True\n",
-        "        )\n",
-        "    ).add_to(other_layer)\n",
-        "    other_layer.add_to(m)\n",
+        "# === Layer 1: All Sentinel-2 Scenes (Blue) ===\n",
+        "scenes_layer = FeatureGroup(name=\"All Sentinel-2 Scenes\")\n",
+        "GeoJson(\n",
+        "    scenes_gdf.__geo_interface__,\n",
+        "    style_function=lambda x: {\n",
+        "        \"fillColor\": \"#3388ff\",\n",
+        "        \"color\": \"#3388ff\",\n",
+        "        \"weight\": 2,\n",
+        "        \"fillOpacity\": 0.15\n",
+        "    },\n",
+        "    tooltip=folium.GeoJsonTooltip(\n",
+        "        fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
+        "        aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
+        "        localize=True\n",
+        "    )\n",
+        ").add_to(scenes_layer)\n",
+        "scenes_layer.add_to(m)\n",
         "\n",
-        "# === Layer 2: Selected Scene (Green) - Separate FeatureGroup ===\n",
-        "if SINGLE_SCENE_MODE and len(selected_gdf) > 0:\n",
-        "    selected_layer = FeatureGroup(name=\"★ SELECTED SCENE (Active)\")\n",
+        "# === Layer 2: Composite Processed Area (Green) ===\n",
+        "if composite_gdf is not None:\n",
+        "    composite_layer = FeatureGroup(name=\"PROCESSED AREA (Composite)\")\n",
         "    GeoJson(\n",
-        "        selected_gdf.__geo_interface__,\n",
+        "        composite_gdf.__geo_interface__,\n",
         "        style_function=lambda x: {\n",
         "            \"fillColor\": \"#00ff00\",\n",
         "            \"color\": \"#00ff00\",\n",
         "            \"weight\": 5,\n",
-        "            \"fillOpacity\": 0.35\n",
+        "            \"fillOpacity\": 0.25\n",
         "        },\n",
         "        tooltip=folium.GeoJsonTooltip(\n",
-        "            fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
-        "            aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
+        "            fields=[\"name\", \"scene_count\", \"snow_coverage\"],\n",
+        "            aliases=[\"Area:\", \"Scenes:\", \"Snow:\"],\n",
         "            localize=True\n",
         "        )\n",
-        "    ).add_to(selected_layer)\n",
-        "    selected_layer.add_to(m)\n",
-        "elif SINGLE_SCENE_MODE and len(selected_gdf) == 0 and selected_href:\n",
-        "    # Fallback: If we couldn't match, create bbox from first href item\n",
-        "    print(f\"WARNING: Could not match selected scene in STAC items. Using first item as fallback.\")\n",
-        "    # Use the first valid item's bbox as the selected scene\n",
-        "    if valid_items:\n",
-        "        first_item = valid_items[0]\n",
-        "        for item in valid_items:\n",
-        "            if selected_scene_basename and selected_scene_basename.replace(\".zarr\", \"\") in item.assets.get(\"product\", {}).get(\"href\", \"\"):\n",
-        "                first_item = item\n",
-        "                break\n",
-        "        \n",
-        "        fallback_bbox = first_item.bbox\n",
-        "        fallback_polygon = box(fallback_bbox[0], fallback_bbox[1], fallback_bbox[2], fallback_bbox[3])\n",
-        "        fallback_gdf = gpd.GeoDataFrame([{\n",
-        "            \"geometry\": fallback_polygon,\n",
-        "            \"scene_id\": first_item.id,\n",
-        "            \"datetime\": first_item.datetime.strftime(\"%Y-%m-%d %H:%M\") if first_item.datetime else \"N/A\",\n",
-        "            \"cloud_cover\": first_item.properties.get(\"eo:cloud_cover\", \"N/A\")\n",
-        "        }], crs=\"EPSG:4326\")\n",
-        "        \n",
-        "        selected_layer = FeatureGroup(name=\"★ SELECTED SCENE (Active)\")\n",
-        "        GeoJson(\n",
-        "            fallback_gdf.__geo_interface__,\n",
-        "            style_function=lambda x: {\n",
-        "                \"fillColor\": \"#00ff00\",\n",
-        "                \"color\": \"#00ff00\",\n",
-        "                \"weight\": 5,\n",
-        "                \"fillOpacity\": 0.35\n",
-        "            },\n",
-        "            tooltip=folium.GeoJsonTooltip(\n",
-        "                fields=[\"scene_id\", \"datetime\", \"cloud_cover\"],\n",
-        "                aliases=[\"Scene ID:\", \"Date:\", \"Cloud Cover:\"],\n",
-        "                localize=True\n",
-        "            )\n",
-        "        ).add_to(selected_layer)\n",
-        "        selected_layer.add_to(m)\n",
+        "    ).add_to(composite_layer)\n",
+        "    composite_layer.add_to(m)\n",
         "\n",
         "# === Layer 3: Seed Points (Red) ===\n",
         "seeds_layer = FeatureGroup(name=\"Glacier Seed Points\")\n",
@@ -839,14 +827,11 @@
         "\n",
         "# Print legend\n",
         "print(f\"\\n{'='*50}\")\n",
-        "print(f\"Map shows {len(scenes_gdf)} scene bounding boxes\")\n",
-        "if SINGLE_SCENE_MODE:\n",
-        "    print(f\"  ★ GREEN polygon: Selected/Active scene\")\n",
-        "    if selected_scene_basename:\n",
-        "        print(f\"    → {selected_scene_basename}\")\n",
-        "    print(f\"  • Blue polygons: Other available scenes ({len(other_gdf)})\")\n",
-        "else:\n",
-        "    print(f\"  • Blue polygons: All Sentinel-2 scene extents\")\n",
+        "print(f\"Map Legend:\")\n",
+        "if composite_gdf is not None:\n",
+        "    print(f\"  GREEN polygon: Actual processed composite area\")\n",
+        "    print(f\"    (This is the data extent after spatial slicing)\")\n",
+        "print(f\"  • Blue polygons: Full Sentinel-2 scene extents ({len(scenes_gdf)})\")\n",
         "print(f\"  • Red points: Glacier seed locations ({len(seeds_gdf)})\")\n",
         "print(f\"  • Orange dashed: Area of Interest (AOI)\")\n",
         "print(f\"{'='*50}\")\n",
