Enhance interactive map section to include processed area and detailed layer descriptions

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -645,15 +645,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Interactive Map: Scene Locations\n",
+        "## Interactive Map: Scene Locations & Processed Area\n",
         "\n",
-        "This section creates an interactive map showing the bounding boxes of all available Sentinel-2 scenes over Iceland.\n",
+        "This section creates an interactive map showing the spatial context of the analysis.\n",
+        "\n",
+        "**Map Layers:**\n",
+        "- **GREEN polygon**: The actual processed composite area (data extent after spatial slicing)\n",
+        "- **Blue polygons**: Full Sentinel-2 scene extents from the STAC catalog\n",
+        "- **Red points**: Glacier seed locations used for the AOI definition\n",
+        "- **Orange dashed box**: Area of Interest (AOI) bounding box\n",
         "\n",
         "**Features:**\n",
-        "- Satellite imagery background (OpenStreetMap tiles)\n",
-        "- Bounding boxes of each scene displayed as polygons\n",
-        "- Seed points (glacier locations) shown as markers\n",
-        "- Click on features for more information"
+        "- Esri satellite imagery basemap\n",
+        "- Layer control to toggle visibility of each layer\n",
+        "- Hover over polygons for scene details (ID, date, cloud cover)"
       ]
     },
     {
