Refactor interactive map center calculation and enhance legend formatting for clarity

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -738,8 +738,9 @@
         "\n",
         "# Calculate map center\n",
         "if composite_gdf is not None:\n",
-        "    center_lon = composite_gdf.geometry.centroid.x.values[0]\n",
-        "    center_lat = composite_gdf.geometry.centroid.y.values[0]\n",
+        "    minx, miny, maxx, maxy = composite_gdf.total_bounds\n",
+        "    center_lon = (minx + maxx) / 2\n",
+        "    center_lat = (miny + maxy) / 2\n",
         "else:\n",
         "    center_lon = (bbox_4326[0] + bbox_4326[2]) / 2\n",
         "    center_lat = (bbox_4326[1] + bbox_4326[3]) / 2\n",
@@ -779,7 +780,7 @@
         "\n",
         "# === Layer 2: Composite Processed Area (Green) ===\n",
         "if composite_gdf is not None:\n",
-        "    composite_layer = FeatureGroup(name=\"PROCESSED AREA (Composite)\")\n",
+        "    composite_layer = FeatureGroup(name=\"★ PROCESSED AREA (Composite)\")\n",
         "    GeoJson(\n",
         "        composite_gdf.__geo_interface__,\n",
         "        style_function=lambda x: {\n",
@@ -834,7 +835,7 @@
         "print(f\"\\n{'='*50}\")\n",
         "print(f\"Map Legend:\")\n",
         "if composite_gdf is not None:\n",
-        "    print(f\"  GREEN polygon: Actual processed composite area\")\n",
+        "    print(f\"  ★ GREEN polygon: Actual processed composite area\")\n",
         "    print(f\"    (This is the data extent after spatial slicing)\")\n",
         "print(f\"  • Blue polygons: Full Sentinel-2 scene extents ({len(scenes_gdf)})\")\n",
         "print(f\"  • Red points: Glacier seed locations ({len(seeds_gdf)})\")\n",
