Enhance scene processing and visualization: update median NDSI computation, apply valid mask for cleaner output, and simplify RGB composite creation without cloud masking

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -327,7 +327,9 @@
         "This section creates a composite from multiple processed scenes.\n",
         "\n",
         "**What this code does:**\n",
-        "- If multiple scenes were processed, it stacks them and computes the **median NDSI** (robust against outliers and clouds)\n",
+        "- Stacks scenes and computes the **median NDSI** (robust against outliers and clouds)\n",
+        "- Builds a **valid mask** (pixel valid in at least one scene)\n",
+        "- Applies the valid mask to the median NDSI for cleaner visualization\n",
         "- Creates an aggregated snow mask based on the median NDSI threshold\n",
         "- Calculates snow coverage statistics\n",
         "\n",
@@ -381,6 +383,9 @@
         "        \n",
         "        # Snow mask from median NDSI\n",
         "        snow_mask = (ndsi_median > NDSI_THRESHOLD) & valid_mask\n",
+        "    \n",
+        "    # Apply valid mask to NDSI for clean visualization\n",
+        "    ndsi_median = ndsi_median.where(valid_mask)\n",
         "    \n",
         "    # Calculate statistics\n",
         "    total_pixels = valid_mask.size\n",
@@ -483,8 +488,7 @@
         "\n",
         "**What this code does:**\n",
         "- Loads B02 (Blue), B03 (Green), B04 (Red) at 60m resolution\n",
-        "- Applies cloud masking using SCL\n",
-        "- Creates a median RGB composite across all scenes\n",
+        "- Builds a median RGB composite **without cloud masking** to keep full visual context\n",
         "- Applies percentile stretching for better visualization"
       ]
     },
@@ -510,16 +514,13 @@
         "    ds_rgb = xr.open_zarr(href, group=\"/measurements/reflectance/r60m\")[[\"b02\", \"b03\", \"b04\"]]\n",
         "    ds_rgb = ds_rgb.sel(x=x_slice, y=y_slice)\n",
         "    \n",
-        "    # Load SCL for cloud masking at 60m\n",
-        "    ds_scl = xr.open_zarr(href, group=\"/conditions/mask/l2a_classification/r60m\")[[\"scl\"]]\n",
-        "    ds_scl = ds_scl.sel(x=x_slice, y=y_slice)\n",
-        "    \n",
-        "    return xr.merge([ds_rgb, ds_scl])\n",
+        "    return ds_rgb\n",
         "\n",
         "\n",
         "def create_rgb_composite(hrefs, x_slice, y_slice):\n",
         "    \"\"\"\n",
         "    Create median RGB composite from all scenes.\n",
+        "    No cloud mask is applied to keep true visual context.\n",
         "    \"\"\"\n",
         "    print(f\"Loading RGB data from {len(hrefs)} scene(s)...\")\n",
         "    \n",
@@ -527,13 +528,6 @@
         "    for i, href in enumerate(hrefs):\n",
         "        try:\n",
         "            scene = load_rgb_scene(href, x_slice, y_slice)\n",
-        "            \n",
-        "            # Apply cloud mask\n",
-        "            valid = ~scene[\"scl\"].isin([3, 8, 9])\n",
-        "            scene[\"b02\"] = scene[\"b02\"].where(valid)\n",
-        "            scene[\"b03\"] = scene[\"b03\"].where(valid)\n",
-        "            scene[\"b04\"] = scene[\"b04\"].where(valid)\n",
-        "            \n",
         "            rgb_scenes.append(scene.compute())\n",
         "            print(f\"  [{i+1}/{len(hrefs)}] Loaded: {os.path.basename(href)}\")\n",
         "        except Exception as e:\n",
