Refactor RGB visualization code for clarity and efficiency: streamline RGB composite creation, enhance percentile stretching, and improve plot annotations.

--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -591,46 +591,58 @@
         "# Uses independently loaded RGB data\n",
         "\n",
         "if rgb_composite and composite:\n",
-        "    # Prepare RGB composite\n",
+        "    # Prepare RGB composite (R, G, B)\n",
         "    rgb_da = rgb_composite['rgb_median']\n",
-        "    rgb_np = np.stack([\n",
-        "        rgb_da.sel(band=\"R\").values,\n",
-        "        rgb_da.sel(band=\"G\").values,\n",
-        "        rgb_da.sel(band=\"B\").values\n",
-        "    ], axis=-1)\n",
+        "    r = rgb_da.sel(band=\"R\").values\n",
+        "    g = rgb_da.sel(band=\"G\").values\n",
+        "    b = rgb_da.sel(band=\"B\").values\n",
         "    \n",
-        "    # Stretch RGB for visualization (2-98 percentile stretch)\n",
-        "    valid_vals = rgb_np[np.isfinite(rgb_np)]\n",
-        "    if valid_vals.size > 0:\n",
-        "        low, high = np.nanpercentile(valid_vals, [2, 98])\n",
-        "        rgb_stretched = (rgb_np - low) / (high - low + 1e-6)\n",
-        "        rgb_stretched = np.clip(rgb_stretched, 0, 1)\n",
-        "        rgb_stretched = np.nan_to_num(rgb_stretched, nan=0.0)\n",
-        "        \n",
-        "        fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
-        "        \n",
-        "        # ----- Plot 1: RGB Composite -----\n",
-        "        axes[0].imshow(rgb_stretched)\n",
-        "        axes[0].set_title(f\"Median RGB Composite\\n(from {rgb_composite['scene_count']} scene(s))\", \n",
-        "                         fontsize=12, fontweight='bold')\n",
-        "        axes[0].axis('off')\n",
-        "        \n",
-        "        # ----- Plot 2: Snow/Ice Mask -----\n",
-        "        snow_data = composite['snow_mask'].values.astype(float)\n",
-        "        axes[1].imshow(snow_data, cmap='Blues', vmin=0, vmax=1)\n",
-        "        axes[1].set_title(f\"Snow/Ice Mask\\n(NDSI >= {NDSI_THRESHOLD})\", \n",
-        "                         fontsize=12, fontweight='bold')\n",
-        "        axes[1].axis('off')\n",
-        "        \n",
-        "        # Add percentage annotation\n",
-        "        axes[1].text(0.5, -0.05, f\"{composite['snow_percentage']:.1f}% Snow Coverage\",\n",
-        "                     transform=axes[1].transAxes, ha='center', fontsize=11,\n",
-        "                     bbox=dict(boxstyle='round', facecolor='lightblue', alpha=0.8))\n",
-        "        \n",
-        "        plt.tight_layout()\n",
-        "        plt.show()\n",
-        "    else:\n",
-        "        print(\"RGB composite is empty after masking.\")\n",
+        "    # Stack and handle NaNs\n",
+        "    rgb_np = np.stack([r, g, b], axis=-1).astype(\"float32\")\n",
+        "    rgb_np = np.nan_to_num(rgb_np, nan=0.0)\n",
+        "    \n",
+        "    # If reflectance is scaled (e.g., 0-10000), normalize to 0-1\n",
+        "    max_val = np.nanmax(rgb_np)\n",
+        "    if max_val > 1.5:\n",
+        "        rgb_np = rgb_np / 10000.0\n",
+        "    \n",
+        "    # Per-channel percentile stretch (better color balance)\n",
+        "    rgb_stretched = np.zeros_like(rgb_np)\n",
+        "    for c in range(3):\n",
+        "        channel = rgb_np[..., c]\n",
+        "        valid = np.isfinite(channel) & (channel > 0)\n",
+        "        if np.any(valid):\n",
+        "            low, high = np.percentile(channel[valid], [2, 98])\n",
+        "            channel = (channel - low) / (high - low + 1e-6)\n",
+        "            channel = np.clip(channel, 0, 1)\n",
+        "        rgb_stretched[..., c] = channel\n",
+        "    \n",
+        "    # Optional gamma correction to reduce bright clouds dominance\n",
+        "    gamma = 1.2\n",
+        "    rgb_stretched = np.power(rgb_stretched, 1 / gamma)\n",
+        "    \n",
+        "    fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+        "    \n",
+        "    # ----- Plot 1: RGB Composite -----\n",
+        "    axes[0].imshow(rgb_stretched)\n",
+        "    axes[0].set_title(f\"Median RGB Composite\\n(from {rgb_composite['scene_count']} scene(s))\", \n",
+        "                     fontsize=12, fontweight='bold')\n",
+        "    axes[0].axis('off')\n",
+        "    \n",
+        "    # ----- Plot 2: Snow/Ice Mask -----\n",
+        "    snow_data = composite['snow_mask'].values.astype(float)\n",
+        "    axes[1].imshow(snow_data, cmap='Blues', vmin=0, vmax=1)\n",
+        "    axes[1].set_title(f\"Snow/Ice Mask\\n(NDSI >= {NDSI_THRESHOLD})\", \n",
+        "                     fontsize=12, fontweight='bold')\n",
+        "    axes[1].axis('off')\n",
+        "    \n",
+        "    # Add percentage annotation\n",
+        "    axes[1].text(0.5, -0.05, f\"{composite['snow_percentage']:.1f}% Snow Coverage\",\n",
+        "                 transform=axes[1].transAxes, ha='center', fontsize=11,\n",
+        "                 bbox=dict(boxstyle='round', facecolor='lightblue', alpha=0.8))\n",
+        "    \n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
         "else:\n",
         "    print(\"RGB or NDSI composite missing. Run processing cells first.\")"
       ]
@@ -644,7 +656,7 @@
         "This section creates an interactive map showing the spatial context of the analysis.\n",
         "\n",
         "**Map Layers:**\n",
-        "- **GREEN polygon**: The actual processed composite area (data extent after spatial slicing)\n",
+        "- **Green polygon**: The actual processed composite area (data extent after spatial slicing)\n",
         "- **Blue polygons**: Full Sentinel-2 scene extents from the STAC catalog\n",
         "- **Red points**: Glacier seed locations used for the AOI definition\n",
         "- **Orange dashed box**: Area of Interest (AOI) bounding box\n",
@@ -774,7 +786,7 @@
         "\n",
         "# === Layer 2: Composite Processed Area (Green) ===\n",
         "if composite_gdf is not None:\n",
-        "    composite_layer = FeatureGroup(name=\"★ PROCESSED AREA (Composite)\")\n",
+        "    composite_layer = FeatureGroup(name=\"PROCESSED AREA (Composite)\")\n",
         "    GeoJson(\n",
         "        composite_gdf.__geo_interface__,\n",
         "        style_function=lambda x: {\n",
@@ -829,7 +841,7 @@
         "print(f\"\\n{'='*50}\")\n",
         "print(f\"Map Legend:\")\n",
         "if composite_gdf is not None:\n",
-        "    print(f\"  ★ GREEN polygon: Actual processed composite area\")\n",
+        "    print(f\"   Green polygon: Actual processed composite area\")\n",
         "    print(f\"    (This is the data extent after spatial slicing)\")\n",
         "print(f\"  • Blue polygons: Full Sentinel-2 scene extents ({len(scenes_gdf)})\")\n",
         "print(f\"  • Red points: Glacier seed locations ({len(seeds_gdf)})\")\n",
