--- a/icland_ice_monitoring.ipynb
+++ b/icland_ice_monitoring.ipynb
@@ -22,20 +22,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "CompletedProcess(args=['pip', 'install', '-q', 'maplibre'], returncode=0)"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import geopandas as gpd\n",
         "import numpy as np\n",
@@ -53,11 +42,7 @@
         "from pyproj import Transformer\n",
         "import dask\n",
         "import warnings\n",
-        "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-        "\n",
-        "# Install maplibre for interactive maps (if not already installed)\n",
-        "import subprocess\n",
-        "subprocess.run([\"pip\", \"install\", \"-q\", \"maplibre\"], check=True)"
+        "from concurrent.futures import ThreadPoolExecutor, as_completed"
       ]
     },
     {
